--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -1,11 +1,11 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebApplication-23A68FFC-463F-4915-88B5-03146439FA1A;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Port=5432;Database=DefaultWebApp;User Id=postgres;Password=postgres;"
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Warning"
+        }
     }
-  }
 }
